--- a/testes e placeholders/Teste1/css/style.css
+++ b/testes e placeholders/Teste1/css/style.css
@@ -19,7 +19,7 @@
 .sombra{
     position: absolute;
     width: 100%;
-    bottom:  0;
+    bottom:  0%;
     opacity: 0%;
     z-index: 3;
 }
@@ -27,13 +27,13 @@
 .cranio{
     position: absolute;
     width: 15%;
-    bottom: 15px;
+    bottom: 3%;
 }
 
 .luzvelas{
 position: absolute;
 width: 90%;
-bottom: 0px;
+bottom: 0%;
 left: 60px;
 z-index: 2;
 
@@ -41,9 +41,9 @@ z-index: 2;
 
 .radar{
     position: absolute;
-    width: 25%;
+    width: 22%;
     top: 15%;
-    right: 38%;
+    right: 40%;
     z-index: 0;
 }
 
@@ -57,7 +57,7 @@ z-index: 2;
 
 .jornal {
     position: absolute; 
-    z-index: 1;
+    z-index: -1;
     width: 25%;
     top: 60px;
     left: 20px;
@@ -117,6 +117,6 @@ z-index: 2;
     position: absolute;
     right: 390px;
     
-    top: 25%;
+    top: 40%;
     background-color: aqua;
 }
