--- a/testes e placeholders/Teste1/css/style.css
+++ b/testes e placeholders/Teste1/css/style.css
@@ -5,9 +5,10 @@
 }
 
 .fundo {
-    position: absolute;
+    position: fixed;
     z-index: -1;
     width: 100%;
+    
 }
 
 .HUD1 {
@@ -34,7 +35,7 @@
 position: absolute;
 width: 90%;
 bottom: 0%;
-left: 60px;
+left: 10%;
 z-index: 2;
 
 }
@@ -51,7 +52,7 @@ z-index: 2;
     position: absolute;
     top: 0%;
     width: 50%;
-    left: 363px;
+    left: 23.75%;
     z-index: 2;
 }
 
@@ -59,7 +60,7 @@ z-index: 2;
     position: absolute; 
     z-index: -1;
     width: 25%;
-    top: 60px;
+    top: 10%;
     left: 20px;
 }
 
