--- a/testes e placeholders/Teste1/css/style.css
+++ b/testes e placeholders/Teste1/css/style.css
@@ -8,6 +8,7 @@
     position: fixed;
     z-index: -1;
     width: 100%;
+    height: 100vh;
     
 }
 
@@ -15,6 +16,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+    height: 100vh;
 }
 
 .sombra{
@@ -23,12 +25,14 @@
     bottom:  0%;
     opacity: 0%;
     z-index: 3;
+    height: 100vh;
 }
 
 .cranio{
     position: absolute;
     width: 15%;
     bottom: 3%;
+    height: 100vh;
 }
 
 .luzvelas{
@@ -37,6 +41,7 @@ width: 90%;
 bottom: 0%;
 left: 10%;
 z-index: 2;
+height: 100vh;
 
 }
 
@@ -46,6 +51,7 @@ z-index: 2;
     top: 15%;
     right: 40%;
     z-index: 0;
+    height: 100vh;
 }
 
 .HUD2{
@@ -54,6 +60,7 @@ z-index: 2;
     width: 50%;
     left: 23.75%;
     z-index: 2;
+    height: 100vh;
 }
 
 .jornal {
@@ -62,6 +69,7 @@ z-index: 2;
     width: 25%;
     top: 10%;
     left: 20px;
+    height: 100vh;
 }
 
 .placa {
@@ -69,6 +77,7 @@ z-index: 2;
     left: 405px;
     width: 10%;
     top: 70px;
+    height: 100vh;
 }
 
 .medalhas {
@@ -76,6 +85,7 @@ z-index: 2;
     left: 400px;
     top: 240px;
     width: 10%;
+    height: 100vh;
 }
 
 .livro {
@@ -83,6 +93,7 @@ z-index: 2;
     left: 360px;
     top: 380px;
     width: 15%;
+    height: 100vh;
 }
 
 .container{
@@ -92,6 +103,7 @@ z-index: 2;
     right: 260px;
     padding: auto;
     height: 170px;
+    height: 100vh;
 }
 
 .textos {
@@ -104,11 +116,13 @@ z-index: 2;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    height: 100vh;
 }
 
 .botao1{
     position: absolute;
     right: 390px;
+    height: 100vh;
     
     top: 20%;
     background-color: aqua;
@@ -117,6 +131,7 @@ z-index: 2;
 .botao2{
     position: absolute;
     right: 390px;
+    height: 100vh;
     
     top: 40%;
     background-color: aqua;
