--- a/testes e placeholders/Teste1/css/style.css
+++ b/testes e placeholders/Teste1/css/style.css
@@ -16,7 +16,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 100vh;
+    height: 100;
 }
 
 .sombra{
@@ -25,14 +25,12 @@
     bottom:  0%;
     opacity: 0%;
     z-index: 3;
-    height: 100vh;
 }
 
 .cranio{
     position: absolute;
     width: 15%;
     bottom: 3%;
-    height: 100vh;
 }
 
 .luzvelas{
@@ -41,7 +39,6 @@ width: 90%;
 bottom: 0%;
 left: 10%;
 z-index: 2;
-height: 100vh;
 
 }
 
@@ -51,7 +48,6 @@ height: 100vh;
     top: 15%;
     right: 40%;
     z-index: 0;
-    height: 100vh;
 }
 
 .HUD2{
@@ -60,7 +56,6 @@ height: 100vh;
     width: 50%;
     left: 23.75%;
     z-index: 2;
-    height: 100vh;
 }
 
 .jornal {
@@ -69,7 +64,6 @@ height: 100vh;
     width: 25%;
     top: 10%;
     left: 20px;
-    height: 100vh;
 }
 
 .placa {
@@ -77,7 +71,6 @@ height: 100vh;
     left: 405px;
     width: 10%;
     top: 70px;
-    height: 100vh;
 }
 
 .medalhas {
@@ -85,7 +78,6 @@ height: 100vh;
     left: 400px;
     top: 240px;
     width: 10%;
-    height: 100vh;
 }
 
 .livro {
@@ -93,7 +85,6 @@ height: 100vh;
     left: 360px;
     top: 380px;
     width: 15%;
-    height: 100vh;
 }
 
 .container{
@@ -103,7 +94,6 @@ height: 100vh;
     right: 260px;
     padding: auto;
     height: 170px;
-    height: 100vh;
 }
 
 .textos {
@@ -116,13 +106,11 @@ height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: 100vh;
 }
 
 .botao1{
     position: absolute;
     right: 390px;
-    height: 100vh;
     
     top: 20%;
     background-color: aqua;
@@ -131,7 +119,6 @@ height: 100vh;
 .botao2{
     position: absolute;
     right: 390px;
-    height: 100vh;
     
     top: 40%;
     background-color: aqua;
