overflow: scroll no texto

--- a/testes e placeholders/Teste1/css/style.css
+++ b/testes e placeholders/Teste1/css/style.css
@@ -107,6 +107,8 @@ z-index: 2;
     direction: ltr;
     text-align: left;
     vertical-align: top;
+    overflow: scroll;
+    scrollbar-width: none;
 }
 
 .botao1{
