--- a/testes e placeholders/Teste1/css/style.css
+++ b/testes e placeholders/Teste1/css/style.css
@@ -128,152 +128,19 @@ z-index: 2;
     z-index: 5;    ;
 }
 
-.jornal {
+.jornal2 {
     position: absolute; 
     z-index: -1;
     width: 25%;
-    top: 10%;
-    left: 2%;
+    top: 18%;
+    left: 4%;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.fundo {
-    position: fixed;
-    z-index: -1;
-    width: 100%;
-    height: 100vh;
-}
-
-.jornal {
-    position: absolute; 
-    z-index: 1;
-    width: 25%;
-    top: 10%;
-    left: 2%;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.fundo {
-    position: fixed;
-    z-index: -1;
-    width: 100%;
-    height: 100vh;
-}
-
-.jornal {
-    position: absolute; 
-    z-index: 1;
-    width: 25%;
-    top: 10%;
-    left: 2%;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.fundo {
-    position: fixed;
-    z-index: -1;
-    width: 100%;
-    height: 100vh;
-}
-
-.jornal {
-    position: absolute; 
-    z-index: 1;
-    width: 25%;
-    top: 10%;
-    left: 2%;
-    background: none; /* Remove qualquer fundo da div do jornal */
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.fundo {
-    position: fixed;
-    z-index: -1;
-    width: 100%;
-    height: 100vh;
-}
-
-.jornal {
-    position: absolute; 
-    z-index: 1;
-    width: 25%;
-    top: 10%;
-    left: 2%;
-}
-
-#consequencias {
-    position: absolute;
-    top: 0%; /* 50% da altura da div pai (jornal) */
-    left: 0%; /* 50% da largura da div pai (jornal) */
-    transform: translate(-100%, -100%); /* Centraliza a div de consequências */
+.consequencias {
+    top: 20%; /* 50% da altura da div pai (jornal) */
+    left: 20%; /* 50% da largura da div pai (jornal) */
     width: 90%; /* Ajusta a largura para se adequar ao espaço */
-    color: brown;
-    font-size: 1.2em;
-    font-family: monospace;
-    z-index: 2; /* O texto vai aparecer sobre a imagem do jornal */
-    text-align: center; /* Centraliza o texto dentro da div */
-    background: transparent; /* Fundo totalmente transparente */
-    border: none; /* Remove qualquer borda, se houver */
-    padding: 0; /* Remove qualquer padding que poderia criar espaço */
-}
-
-.container {
-    position: absolute;
-    left: 25%;
-    bottom: 5%;
-    right: 25%;
-    padding: auto;
-    height: 24%;
-}
-
-.textos {
-    position: absolute;
-    writing-mode: horizontal-tb;
-    color: brown;
-    font-size: 170%;
-    font-family: monospace;
-    direction: ltr;
-    text-align: left;
-    vertical-align: top;
-    overflow: scroll;
-    scrollbar-width: none;
-}
-
-.botao1, .botao2 {
-    position: absolute;
-    right: 25%;
-    font-size: 20px;
-    z-index: 5;
-}
-
-.botao1 {
-    top: 20%;
-}
-
-.botao2 {
-    top: 40%;
+    color: black;
+    z-index: 5; /* O texto vai aparecer sobre a imagem do jornal */
+    text-align: left; /* Centraliza o texto dentro da div */
 }
