--- a/testes e placeholders/Teste1/css/style.css
+++ b/testes e placeholders/Teste1/css/style.css
@@ -6,7 +6,7 @@
 }
 .fundo {
     position: fixed;
-    z-index: -1;
+    z-index: -3;
     width: 100%;
     height: 100vh;
     
@@ -48,8 +48,8 @@ z-index: 2;
     position: absolute; 
     z-index: -1;
     width: 25%;
-    top: 10%;
-    left: 2%;
+    top: 14%;
+    left: 2%;   
 }
 
 .placa {
@@ -61,9 +61,10 @@ z-index: 2;
 
 .livro {
     position: absolute;
-    left: 360px;
-    top: 380px;
+    left: 26%;
+    top: 55%;
     width: 15%;
+    z-index: -1;
 }
 
 @font-face {
@@ -139,13 +140,31 @@ z-index: 2;
 
 .consequencias {
     position: absolute;
-    top: 17.5%; /* 50% da altura da div pai (jornal) */
+    top: 21%; /* 50% da altura da div pai (jornal) */
     left: 3.5%; /* 50% da largura da div pai (jornal) */    
-    height: 40%;
+    height: 38%;
     width: 22%; /* Ajusta a largura para se adequar ao espaço */
     color: black;
     z-index: 5; /* O texto vai aparecer sobre a imagem do jornal */
     text-align: left; /* Centraliza o texto dentro da div */
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+.consequencias::-webkit-scrollbar {
+    width: 0; /* Oculta a barra de rolagem */
+    background: transparent; /* Fundo transparente */
+}
+.setaL {
+    position: absolute;
+    top: 59.5%;
+    left: 3%;
+    z-index: 8;
+}
+.setaR {
+    position: absolute;
+    top: 59.5%;
+    left: 24.5%;
+    z-index: 8;
 }
 
 .filtroM {
