--- a/testes e placeholders/Teste1/css/style.css
+++ b/testes e placeholders/Teste1/css/style.css
@@ -19,14 +19,14 @@
     height: 100;
 }
 
-.luzvelas{
+/* .luzvelas{
 position: absolute;
 width: 90%;
 bottom: 0%;
 left: 10%;
 z-index: 2;
 
-}
+} */
 
 .radar{
     position: absolute;
