script que tá valendo é o 2:     add função percorreManual que esconde e mostra     as páginas conforme clicamos nos botões     com isso, pode jogar fora as 10 funções do     manual 👏👏👏 add manual ao html modificação no css do manual

--- a/testes e placeholders/Teste1/css/style2.css
+++ b/testes e placeholders/Teste1/css/style2.css
@@ -118,7 +118,7 @@
     font-family: 'PixelBook';
     src: url('./fonts/PixelBook-Regular.ttf');
 }
-.game-board .manual .areamanualT #manualT {
+.game-board .manual .areamanualT .página {
     position: absolute;
     text-align: left;
     font-family: 'PixelBook';
@@ -130,7 +130,8 @@
     overflow-x: hidden;
     overflow-y: scroll;
     scrollbar-width: none;
-    height: 100%;  
+    height: 100%;
+    display: none;
 }
 .game-board .manual .botsetas {
     position: absolute;
