criação da comporta do manual (não funciona ainda)

--- a/testes e placeholders/Teste1/css/style2.css
+++ b/testes e placeholders/Teste1/css/style2.css
@@ -140,6 +140,11 @@
     left: 42%;
     top: 90%;
 }
+.game-board .manual .comporta{
+    position: absolute;
+    z-index: 3;
+    opacity: 0;
+}
 .game-board #HUD2 {
     position: absolute;
     top: 0%;
