--- a/testes e placeholders/Teste1/css/style2.css
+++ b/testes e placeholders/Teste1/css/style2.css
@@ -143,7 +143,7 @@
 .game-board .manual .comporta{
     position: absolute;
     z-index: 3;
-    opacity: 0;
+    display: none;
 }
 .game-board #HUD2 {
     position: absolute;
