--- a/testes e placeholders/Teste1/css/style2.css
+++ b/testes e placeholders/Teste1/css/style2.css
@@ -112,7 +112,7 @@
     top: 14.4%;
     left: 3.3%;
     padding: 1%;
-    z-index: 3;
+    z-index: 5;
 }
 @font-face {
     font-family: 'PixelBook';
@@ -140,10 +140,33 @@
     left: 42%;
     top: 90%;
 }
-.game-board .manual .comporta{
+.game-board .manual .comportaF{
+    display: inline;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 9;
+}
+.game-board .manual .comportaA{
+    display: none;
+    width: 100%;
+    height: 100%;
     position: absolute;
     z-index: 3;
+}
+.game-board .manual .comportaB{
     display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 3;
+}
+.game-board .botaoC {
+    position: absolute;
+    top: 70%;
+    left: 18%;
+
+
 }
 .game-board #HUD2 {
     position: absolute;
