--- a/testes e placeholders/Teste1/css/style2.css
+++ b/testes e placeholders/Teste1/css/style2.css
@@ -108,8 +108,8 @@
 .game-board .manual .areamanualT {
     position: absolute;
     width: 93.22%;
-    height: 81.27%;
-    top: 14.4%;
+    height: 79%;
+    top: 12.4%;
     left: 3.3%;
     padding: 1%;
     z-index: 5;
@@ -138,7 +138,7 @@
     z-index: 6;
     width: 23%;
     left: 42%;
-    top: 90%;
+    top: 92%;
 }
 .game-board .manual .comportaF{
     display: inline;
@@ -147,19 +147,26 @@
     position: absolute;
     z-index: 9;
 }
-.game-board .manual .comportaA{
+.game-board .manual .comportaFA{
     display: none;
     width: 100%;
     height: 100%;
     position: absolute;
     z-index: 3;
 }
+.game-board .manual .comportaA{
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 9;
+}
 .game-board .manual .comportaB{
     display: none;
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 3;
+    z-index: 9;
 }
 .game-board .botaoC {
     position: absolute;
