--- a/testes e placeholders/Teste1/css/style2.css
+++ b/testes e placeholders/Teste1/css/style2.css
@@ -9,6 +9,20 @@
     width: 100vw; 
     height: 100vh;
 }
+.game-board #FadeOut {
+    position: absolute;
+    left: 0;
+    opacity: 1;
+    transition: opacity 2s ease, z-index 2s ease;
+    z-index: 8;
+}
+.game-board #FadeIn {
+    position: absolute;
+    left: 0;
+    opacity: 0;
+    transition: opacity 2s ease;
+    z-index: -20;
+}
 .game-board #fundo {
     position: fixed;
     z-index: -3;
@@ -145,7 +159,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 9;
+    z-index: 7;
 }
 .game-board .manual .comportaFA{
     display: none;
@@ -159,21 +173,24 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 9;
+    z-index: 7;
 }
 .game-board .manual .comportaB{
     display: none;
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 9;
+    z-index: 7;
 }
 .game-board .botaoC {
     position: absolute;
     top: 70%;
     left: 18%;
-
-
+    z-index: 1;
+    transition: z-index 0.75s ease;
+}
+.game-board .botaoC:active {
+    z-index: -1;
 }
 .game-board #HUD2 {
     position: absolute;
@@ -181,6 +198,31 @@
     width: 50%;
     left: 23.75%;
     z-index: 2;
+}
+.game-board .HUD2 {
+    position: absolute;
+    top: 1%;
+    width: 18%;
+    height: 9%;
+    right: 29.75%;
+    z-index: 3;
+}
+.game-board .HUD2 #x1 {
+    position: absolute;
+    height: 100%;
+    display: none;
+}
+.game-board .HUD2 #x2 {
+    position: absolute;
+    height: 100%;
+    left: 40%;
+    display: none;
+}
+.game-board .HUD2 #x3 {
+    position: absolute;
+    height: 100%;
+    left: 80%;
+    display: none;
 }
 .game-board #radar {
     position: absolute;
