--- a/testes e placeholders/Teste1/css/style2.css
+++ b/testes e placeholders/Teste1/css/style2.css
@@ -13,6 +13,7 @@
 .game-board #FadeOut {
     position: absolute;
     width: 100%;
+    height: 100%;
     left: 0;
     opacity: 1;
     transition: opacity 2s ease, z-index 2s ease;
@@ -21,6 +22,7 @@
 .game-board #FadeIn {
     position: absolute;
     width: 100%;
+    height: 100%;
     left: 0;
     opacity: 0;
     transition: opacity 2s ease;
@@ -212,20 +214,27 @@
 }
 .game-board .HUD2 #x1 {
     position: absolute;
-    height: 100%;
+    top: 2%;
+    right: 30%;
+    height: 45%;
     display: none;
+    z-index: 3;
 }
 .game-board .HUD2 #x2 {
     position: absolute;
-    height: 100%;
-    left: 40%;
+    top: 2%;
+    right: 20%;
+    height: 45%;
     display: none;
+    z-index: 3;
 }
 .game-board .HUD2 #x3 {
     position: absolute;
-    height: 100%;
-    left: 80%;
+    top: 2%;
+    right: 10%;
+    height: 45%;
     display: none;
+    z-index: 3;
 }
 .game-board #radar {
     position: absolute;
