--- a/testes e placeholders/Teste1/css/style2.css
+++ b/testes e placeholders/Teste1/css/style2.css
@@ -271,3 +271,33 @@
     top: 20%;
     z-index: 5;
 }
+.game-board .Cdia {
+    position: absolute;
+    top: 1.5%;
+    left: 5%;
+    width: 17%;
+    height: 13%;
+}
+.game-board .Cdia #Cdia {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.game-board .Cdia #Sdia {
+    position: absolute;
+    width: 33%;
+    height: 90%;
+    top: 4%;
+    right: 2%;
+    z-index: 3;
+}
+.game-board .Cdia #Tdia {
+    position: absolute;
+    text-align: center;
+    top:25%;
+    right: 7%;
+    font-family: "Press Start 2P", cursive;
+    color:blue;
+    font-size: 4vw;
+    z-index: 2;
+}
