--- a/css/style2.css
+++ b/css/style2.css
@@ -5,10 +5,42 @@
     overflow: hidden;
 }
 
-
-.game-board {  /*Usa as proporções da tela para garantir que o jogo se adapte a qualquer resolução */
-    width: 100vw; 
+.game-board {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+    max-height: 100%;
+  }
+  @media (orientation: portrait) {
+    .game-board {
+      height: auto;
+      width: 100vw;
+      aspect-ratio: 1920 / 1080;
+    }
+  }
+  @media (orientation: landscape) and (min-aspect-ratio: 1920/1080){
+    .game-board {
+      width: auto;
+      height: 100vh;
+      aspect-ratio: 1920 / 1080;
+    }
+  }
+  @media (orientation: landscape) and (max-aspect-ratio: 1920/1080){
+    .game-board {
+      width: 100vw;
+      height: auto;
+      aspect-ratio: 1920 / 1080;
+    }
+  }
+  
+.fundao {
+    position: absolute;
+    background-color: black;
+    width: 100vw;
     height: 100vh;
+    z-index: -5;
 }
 .game-board #FadeOut {
     position: absolute;
@@ -29,7 +61,7 @@
     z-index: -20;
 }
 .game-board #fundo {
-    position: fixed;
+    position: absolute;
     z-index: -3;
     width: 100%;
     height: 100%; 
@@ -58,12 +90,14 @@
     height: 68.8%;
     position: absolute;
     z-index: 2;
-    top: 31%;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .game-board .HUD1 .areacaveira #caveira {
-    width: 100%;
     position: relative;
-    top: calc(14vh - 6vw);
+    width: 100%;
 }
 .game-board .HUD1 .areatransc {
     width: 58.85%;
@@ -276,7 +310,7 @@
 .game-board #radar {
     position: absolute;
     width: 25%;
-    top: 15%;
+    top: 20%;
     right: 38.25%;
     z-index: -1;
 }
