--- a/css/style2.css
+++ b/css/style2.css
@@ -129,6 +129,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     position: absolute;
     width: 13.75%;
     height: 46.44%;
@@ -449,7 +450,12 @@
     height: 100%;
 }
 .game-board .Cdia .tela{
+    display: inline;
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     width: 26%;
     height: 70%;
     top: 15%;
@@ -461,25 +467,10 @@
     height: 100%;
     z-index: 3;
 }
-/*.game-board .Cdia #Tdia {
-    position: absolute;
+.game-board .Cdia .tela #Tdia {
+    display: inline;
     text-align: center;
-    top:23%;
-    right: 8%;
-    font-family: "Press Start 2P", cursive;
-    color:green;
-    font-size: 4vw;
-    z-index: 2;
-}*/
-.game-board .Cdia #Tdia {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 5%;
-    width: 100%;
-    height: 100%;
-    font-family: "Press Start 2P", cursive;
+    font-family: "PixelBook", cursive;
     color:green;
     font-size: 4vw;
     z-index: 2;
