reformulação das funções e estruturas iniciais (a ser replicado no restante)

--- a/css/style2.css
+++ b/css/style2.css
@@ -484,3 +484,17 @@
 .dialogos {
     display: none;
 }
+
+.botcontinuar {
+    background: none;
+    border: none;
+    color:rgb(85, 21, 21);
+    font-size: 1.5vw;
+    font-family: 'PixelBook';
+    animation: piscar 1s infinite;
+}
+@keyframes piscar {
+    0% {color: rgb(85, 21, 21);}
+    50% {color: rgb(170, 19, 19);}
+    100% {color: rgb(85, 21, 21);}
+}
